--- a/404.html
+++ b/404.html
@@ -27,7 +27,10 @@
         <div class='container'>
             <div class="hero-container">
                 <div class="hero-content">
-                    <div class="hero-title">404</div>
+                    <div class="hero-title">Страница не найдена</div>
+                </div>
+                <div class="hero-text">
+                        Вернуться на<span>главную</span> страницу!
                 </div>
             </div>
         </div>
