--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SV</title>
+    <title>SV - 404</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
@@ -16,7 +16,7 @@
             <div class='logo'><img src='https://cdn.discordapp.com/avatars/924402429158625290/574ca67b94b3f881236c08947696ac4b.webp' alt='Logo'></div>
             <nav class='menu'>
                 <ul>
-                    <li class='menu-item active'><a href="#">Главная</a></li>
+                    <li class='menu-item active'><a href="/">Главная</a></li>
                     <div class="theme" id="theme"><i class="ri ri-sun-line" data-name="Сменить тему"></i></div>
                 </ul>
             </nav>
@@ -30,7 +30,7 @@
                     <div class="hero-title">Страница не найдена</div>
                 </div>
                 <div class="hero-text">
-                        Вернуться на<span>главную</span> страницу!
+                    Вернуться на <span><a href="/">главную</a></span> страницу!
                 </div>
             </div>
         </div>
