--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
                     <div class="hero-title">Страница не найдена</div>
                 </div>
                 <div class="hero-text">
-                    Вернуться на <span><a href="/">главную</a></span> страницу!
+                    <h1>Вернуться на <span><a href="/">главную</a></span> страницу!</h1>
                 </div>
             </div>
         </div>
