--- a/404.html
+++ b/404.html
@@ -30,7 +30,10 @@
                     <div class="hero-title">Страница не найдена</div>
                 </div>
                 <div class="hero-text">
-                    <h1>Вернуться на <span><a href="/">главную</a></span> страницу!</h1>
+                    Верните на <span>главную</span> страницу
+                </div>
+                div class="hero-actions">
+                    <a href="/" class="btn primary">Вернуться</a>
                 </div>
             </div>
         </div>
