--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
                     <div class="hero-title">Страница не найдена</div>
                 </div>
                 <div class="hero-text">
-                    Верните на <span>главную</span> страницу
+                    Вернитесь на <span>главную</span> страницу
                 </div>
                 div class="hero-actions">
                     <a href="/" class="btn primary">Вернуться</a>
