--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
                 <div class="hero-text">
                     Вернитесь на <span>главную</span> страницу
                 </div>
-                div class="hero-actions">
+                <div class="hero-actions">
                     <a href="/" class="btn primary">Вернуться</a>
                 </div>
             </div>
