--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </li>
                     <li class="adventure">
                         <div class="adventure-title">Надёжность</div>
-                        <div class="adventure-content">Бот почти никогда не выключается и всегда защищает ваш сервер!</div>
+                        <div class="adventure-content">Бот почти никогда не выключается и всегда готов защищить ваш сервер!</div>
                     </li>
                     <li class="adventure">
                         <div class="adventure-title">Бесплатный</div>
