fix display 404.html

--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
     
     <section id='main'>
         <div class='container'>
-            <div class="hero-container">
+            <div class="hero-container" style="flex-direction: column;">
                 <div class="hero-content">
                     <div class="hero-title">Страница не найдена</div>
                 </div>
