--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SV - Home</title>
+    <meta property="og:title" content="Security Verification">
+    <meta property="og:url" content="https://sv-bot.tk">
+    <meta property="og:image" content="https://images-ext-2.discordapp.net/external/lpHBm7-jQJhF3iAGnSOWgTfR7A1vgeZ9y2Smebk2ehA/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/924402429158625290/574ca67b94b3f881236c08947696ac4b.webp?width=468&height=468">
+    
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
