--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>SV - Home</title>
     <meta property="og:title" content="Security Verification">
     <meta property="og:url" content="https://sv-bot.tk">
-    <meta property="og:image" content="https://images-ext-2.discordapp.net/external/lpHBm7-jQJhF3iAGnSOWgTfR7A1vgeZ9y2Smebk2ehA/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/924402429158625290/574ca67b94b3f881236c08947696ac4b.webp?width=468&height=468">
-    
+    <meta property="og:image" content="./favicon.webp">
+    <meta property="og:type" content="article">
+    <meta property="og:description" content="Security Verification - Бот для защиты вашего сервера и создания верификации для защиты от ботов.">
     <link rel="stylesheet" href="style.css">
+    <link type="image/x-icon" rel="shortcut icon" href="favicon.webp">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body class="dark">
