--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                         Бот для <span>защиты</span> вашего сервера!
                     </div>
                     <div class="hero-actions">
-                        <a href="#" class="btn primary">Пригласить бота</a>
-                        <a href="#" class="btn default">Сервер поддержки</a>
+                        <a href="https://discord.com/api/oauth2/authorize?client_id=924402429158625290&permissions=8&scope=applications.commands%20bot" class="btn primary">Пригласить бота</a>
+                        <a href="https://discord.gg/RVZygWpRkM" class="btn default">Сервер поддержки</a>
                     </div>
                 </div>
             </div>
