--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SV - Home</title>
+    <meta property="og:site_name" content="https://sv-bot.tk">
     <meta property="og:title" content="Security Verification">
     <meta property="og:url" content="https://sv-bot.tk">
     <meta property="og:image" content="./favicon.webp">
