--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                         <div class="adventure-title">Бесплатный</div>
                         <div class="adventure-content">В боте нет премиум-функций, дорогие читатели!</div>
                     </li>
+                    <li class="adventure">
+                        <div class="adventure-title">Поддержка</div>
+                        <div class="adventure-content">Интересующие вопросы по проекту вы можете узнать на нашем сервере поддержки.</div>
+                    </li>
                 </ul>
             </div>
         </div>
