--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </li>
                     <li class="adventure">
                         <div class="adventure-title">Надёжность</div>
-                        <div class="adventure-content">Бот почти никогда не выключается и всегда готов защищить ваш сервер!</div>
+                        <div class="adventure-content">Мы имеем отличную защиту и шифровку ваших данных благодаря чему они находятся в безопасности!</div>
                     </li>
                     <li class="adventure">
                         <div class="adventure-title">Бесплатный</div>
@@ -70,6 +70,10 @@
                     <li class="adventure">
                         <div class="adventure-title">Поддержка</div>
                         <div class="adventure-content">Интересующие вопросы по проекту вы можете узнать на нашем сервере поддержки.</div>
+                    </li>
+                    <li class="adventure">
+                        <div class="adventure-title">Стабильность</div>
+                        <div class="adventure-content">Мы постоянно следим за стабильностью бота и стараемся обеспечивать бесперебойную работу.</div>
                     </li>
                 </ul>
             </div>
