--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </li>
                     <li class="adventure">
                         <div class="adventure-title">Надёжность</div>
-                        <div class="adventure-content">Мы имеем отличную защиту и шифровку ваших данных благодаря чему они находятся в безопасности!</div>
+                        <div class="adventure-content">Бот надёжный каки швейцарские часы!</div>
                     </li>
                     <li class="adventure">
                         <div class="adventure-title">Бесплатный</div>
