--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="title">Статистика</div>
                 <div class="subtitle">Текущее количество <span>серверов и пользователей</span> Security Verification</div>
             </div>
-            <div class="stats-row">
+            <div class="stats">
                 <ul>
                     <li class="stats-item">2.9K+<br>серверов</li>
                     <li class="stats-item">140.0K+<br>пользователей</li>
