--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SV - 404</title>
     <link rel="stylesheet" href="style.css">
+    <link type="image/x-icon" rel="shortcut icon" href="favicon.webp">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body class="dark">
